fix missing layout in a post

--- a/src/pages/blog/super-moon-shot-2011/index.mdx
+++ b/src/pages/blog/super-moon-shot-2011/index.mdx
@@ -1,16 +1,14 @@
 ---
 categories:
 - Life
-comments: true
 pubDate: 2011-03-20T20:37:56Z
-slug: super-moon-shot-2011
 tags:
 - Super Moon 2011
 - พระจันทร์เต็มดวง
 - ภาพภ่ายพระจันทร์
 title: ภาพถ่ายพระจันทร์เต็มดวง Super Moon 2011
 url: /2011/03/20/super-moon-shot-2011/
-wordpress_id: 1509
+layout: '../../../layouts/PostLayout.astro'
 ---
 
 ดูเหมือนเป็นข่าวฮือฮากันพอสมควรนะ กับ **Super Moon** เมื่อวานเนี่ย .. ส่วนตัวผมคิดว่าสื่อประโคมข่าวเยอะไปหน่อย (ก็เหมือนกับปรากฏการณ์ทุกๆครั้งที่ผ่านมา) ทำเอาหลายคนตั้งหน้าตั้งตารอ และก็พบว่าพระจันทร์ก็ใหญ่เท่าเดิม .. แต่ก็เอาเถอะนะ เมื่อวานได้ไปถ่ายรูปพระจันทร์ที่เขาว่าใหญ่ๆมาเหมือนกัน
