--- a/src/pages/blog/stylebot/index.mdx
+++ b/src/pages/blog/stylebot/index.mdx
@@ -17,13 +17,14 @@ url: /2012/10/10/stylebot-custom-css/
 thumbnail: /images/stylebot/8506211115_85e4de2e96_o.png
 layout: '../../../layouts/PostLayout.astro'
 ---
-import Picture from '../../../components/Picture.astro';
+import Picture from '@components/Picture.astro';
+import WarningMessage from '@components/WarningMessage.astro';
 
-<p class="message--warning">
+<WarningMessage>
   <strong>Update 2018: บทความนี้เก่าแล้ว ตอนนี้ StyleBot หยุดพัฒนาไปแล้ว ใช้ Stylus ดีกว่าครับ</strong>
-</p>
+</WarningMessage>
 
-เคยไหมครับเวลาเข้าเว็บบางเว็บแล้วรู้สึกไม่ชอบใจอะไรบางอย่าง เช่น ฟอนต์ไม่สวย สีพื้นหลังเปรี้ยวเกิน หรือ[ฟอนต์ตัวเล็กเท่าจิ๋มมด](https://www.manager.co.th) ครั้นจะไปแจ้งเจ้าของเว็บให้ปรับปรุง ก็ดูจะเกินกำลังไปหน่อย Stylebot ช่วยคุณได้ครับ
+เคยไหมครับเวลาเข้าเว็บบางเว็บแล้วรู้สึกไม่ชอบใจอะไรบางอย่าง เช่น ฟอนต์ไม่สวย สีพื้นหลังเปรี้ยวเกิน หรือ[ฟอนต์ตัวเล็กเท่าจิ๋มมด](https://www.manager.co.th) ครั้นจะไปแจ้งเจ้าของเว็บให้ปรับปรุง ก็ดูจะเกินกำลังไปหน่อย Stylebot ช่วยคุณได้ครับ
 
 [**Stylebot**](https://github.com/ankit/stylebot) เป็น Extension ของ Google Chrome ที่ให้เราช่วยเปลี่ยน style (CSS) ของเว็บใดๆ ในโลกนี้ได้ โดย Stylebot จะจำค่าที่เราเปลี่ยนแปลงไว้ พอเรากลับเข้าเว็บนั้น style ก็จะเป็นตามที่เรากำหนดไว้ครับ สามารถดาวน์โหลดและติดตั้งได้จาก [Chrome Web Store](https://chrome.google.com/webstore/detail/stylebot/oiaejidbmkiecgbjeifoejpgmdaleoha) ได้เลย นอกจากนี้ยังมี source บน [Github](https://github.com/ankit/stylebot) ด้วยครับผม
 
