update uses page content

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -10,7 +10,7 @@ import Picture from '@components/Picture.astro';
 # Tools I use
 
 Inspired by [uses.tech](https://uses.tech) where developers share their
-hardware/software/tools they use regularly, here are my tools, updated for 2021-2022.
+hardware/software/tools they use regularly. Here are my tools, updated for 2023.
 
 ## Software
 
@@ -24,7 +24,7 @@ hardware/software/tools they use regularly, here are my tools, updated for 2021-
 - [Vim](https://www.vim.org/) for a quick editing from the terminal. Here is my [`.vimrc`](https://github.com/armno/dotfiles/blob/master/.vimrc).
 - Git: I use command line Git with [delta](https://github.com/dandavison/delta) to render better diffs and logs
 - [JetBrains Mono fonts](https://www.jetbrains.com/lp/mono/) in both code editors and terminal.
-- Terminal colors: I have both dark and light themes set up and use depending on the light conditions. I create `dark` and `light` shell commands to switch between base16 themes.
+- Terminal colors: I have both dark and light themes set up and use depending on the light conditions. I create `dark` and `light` aliases to switch between base16 themes.
   - dark: `base16_material-darker`
   - light: `base16_google-light`
 
@@ -42,13 +42,12 @@ hardware/software/tools they use regularly, here are my tools, updated for 2021-
 </div>
 
 - [VSCode](https://code.visualstudio.com/) and themes
-  - dark: [`New Moon`](https://taniarascia.github.io/new-moon/)
+  - dark: [`Monokai Pro`](https://monokai.pro/)
   - light: [`GitHub Light Default`](https://marketplace.visualstudio.com/items?itemName=GitHub.github-vscode-theme)
 
 ### Others
 
 - [Homebrew](https://brew.sh/) package manager
-- [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/) as the main browser
 - [Google Chrome Canary](https://www.google.com/chrome/canary) as the development browser
 - [Raycast](https://www.raycast.com/) for shortcuts, windows management
 - [BetterTouchTool](https://folivora.ai/) for shortcuts, keyboard remappings
@@ -77,32 +76,31 @@ Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business
   full
 />
 
-Keyboards: [Portico](https://thekey.company/products/portico-keyboard) 65% mechanical keyboard at work and a [custom 60% mechanical keyboard](https://armno.in.th/2019/05/01/custom-mechanical-keyboard-build-2/) at home.
+Keyboards: [Ginkgo65](https://ginkgo65.com/) 65% mechanical keyboard at work and a [custom Tofu 60% mechanical keyboard](https://armno.in.th/2019/05/01/custom-mechanical-keyboard-build-2/) at home.
 
 <div class="full-bleed">
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
     <Picture
-      src="/images/uses/portico-gmk-wob.jpg"
-      alt="my Portinco mechanical keyboard at work"
-      caption="Build details: Portico Smoke / FR4 plate / Durock V2 stabs / NK Cream + Krytox 205g0 / GMK WoB Katakana"
+      src="/images/uses/ginkgo65-keyboard.jpg"
+      alt="my Ginkgo65 mechanical keyboard at work"
+      caption="Build details: Ginkgo65 Black x Copper / Polycarbonate plate / Durock V2 stabs / C3 Tangerine 67g + Krytox 205g0 / MT3 Extended 2048 Katakana"
     />
     <Picture
       src="/images/uses/tofu-susuwatari.jpg"
       alt="my custom 60% mechanical keyboard"
-      caption="Build details: Tofu alu case / DZ60 PCB / alu plate / Everglide stabs / Gateron milky brown, Susuwatari MT3 keycaps"
+      caption="Build details: Tofu alu case / DZ60 PCB / Aluminum plate / Everglide stabs / Gateron milky brown / MT3 Susuwatari"
     />
   </div>
 </div>
 
-Mouse: [Mi Dual Mode Wireless Mouse](https://duckduckgo.com/?t=ffab&q=mii+bluetooth+silent+mouse&ia=web)
+Mouse: [Logitech M331 Silent](https://duckduckgo.com/?q=logitech+m331+silent&t=ffab&ia=web)
 
-Headphones: I have a few of them for my various use cases
+Headphones: I have ~a few~ too many of them for my various use cases
 
-- [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for music listenening
-- [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for more serious music listening
+- [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for office work
+- [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for music listening
 - [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for calls and remote meetings. (This one has a really good mic!)
 - [Soundpeats Air3](https://us.soundpeats.com/products/air3) for commuting and workouts
-- plus: a [DIY headphones stand](https://armno.wordpress.com/2013/05/09/746-headphone-stand/) made of teak wood.
 
 <div class="full-bleed">
   <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,1fr))] gap-8">
