tweaking here and there

--- a/src/pages/blog/lazy-load-disqus/index.mdx
+++ b/src/pages/blog/lazy-load-disqus/index.mdx
@@ -96,7 +96,7 @@ const observerOptions = {
 - ถ้าให้เป็น 0 หมายถึง ให้เรียก callback เมื่อ element เข้ามาในกรอบ 0%
 - ถ้าให้เป็น 1 หมายถึง ให้เรียก callback เมื่อ element เข้ามาในกรอบ 100%
 
-### 3. สร้าง observer จาก ​`IntersectionObserver`
+### 3. สร้าง observer จาก `IntersectionObserver`
 
 จากนั้นก็สร้าง object `observer` จาก `IntersectionObserver` โดยส่ง parameter เข้าไป 2 ตัว
 
