--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -23,7 +23,7 @@ This is what I will do if I have to setup it from scratch today.
 Still can't say I'm a Vim user, but at least I'm comfortable with basic Vim motions.
 The first thing I will do after installing VSCode is to _Vimify_ it.
 
-by installing Vim extension.
+by installing Vim extension in VSCode - it's my most important VSCode extension.
 
 then remap `esc` to `jk` to quickly switch from Insert mode to Command mode.
 It's the same mapping I use in Vim.
@@ -51,12 +51,14 @@ I try to make VSCode looks minimal by:
 - Hide icons in panel
 - Hide right sidebar
 
-Last but no least, I move the global search panel from the left to the bottom sidebar.
-It is easier to read for longer text in the search results.
+I also move the global search panel from the left to the bottom sidebar.
+I found it is a bit easier to read for longer text in the search results.
 
-- move search to bottom
+## Extensions
 
-3. Extensions
+I don't have a lot of extensions and I tend to adjust activated extensions per project
+and try to use as little extension as possible.
+
 5. disable Peek
 6. shortcuts and custom shortcuts
   - shortcuts to open explorer, search, terminal
