--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -82,9 +82,9 @@ My typical VSCode window looks like this
   width="1928" height="1518"/>
 
 
-- Zoom level: +1. Instead of increasing the font size, I like to zoom the whole window to +1 and make the font size smaller at 11px. It renders the same visual size of font size 14 at zoom level 0, but other UI elements are bigger and easier to read.
-- Increase tree indent to 20px
-
+- Zoom level: +1. Instead of increasing the font size, I like to zoom the whole window to +1 and make the font size smaller at 11px. It renders the same visual size of font size 14 at zoom level 0, but it makes other UI elements bigger and easier to read.
+- Increase tree indent in Explorer view from 8px to 16px
+- Disable Peek Preview for multiple references or definitions.
 
 
 ## Search
@@ -103,12 +103,13 @@ There are a few issues there.
 The remap the keyboard shortcut to New Search Editor command instead. This opens the search window in a new tab.
 It's easier to skim through the results.
 
+However this Search Editor is still not perfect. It doesn't update the search result in real time when the changes are made. Also its syntax highlighting doesn't work for every language.
+
 ## Extensions
 
 I don't have a lot of extensions installed. I tend to adjust activated extensions based on the project I'm working on
 Since speed it crucial for me, I try to use as little extensions as possible.
 
-5. disable Peek
 6. shortcuts and custom shortcuts
   - shortcuts to open explorer, search, terminal
   - split pane and moving around
