a bit more content

--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -107,13 +107,38 @@ However this Search Editor is still not perfect. It doesn't update the search re
 
 ## Extensions
 
-I don't have a lot of extensions installed. I tend to adjust activated extensions based on the project I'm working on
-Since speed it crucial for me, I try to use as little extensions as possible.
+Since speed it crucial for me, I try to install as little extensions as possible to keep things quick and snappy.
+I also like to activate/deactivate installed extensions when switch a project.
+For example, I would activate [Angular Language Service extension](https://github.com/angular/vscode-ng-language-service)
+only when I'm working on an Angular project,
+and deactivate it when I switch to work on something else.
 
-6. shortcuts and custom shortcuts
-  - shortcuts to open explorer, search, terminal
-  - split pane and moving around
-  - setting custom key binding from command palette
+Here are extensions I like and have them activated most of the time.
+
+- [ESLint](https://github.com/Microsoft/vscode-eslint)
+- [IntelliCode](https://marketplace.visualstudio.com/items?itemName=VisualStudioExptTeam.vscodeintellicode)
+- [Path Intellisense](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense)
+- [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
+- [Tailwind CSS IntelliSense](https://marketplace.visualstudio.com/items?itemName=bradlc.vscode-tailwindcss)
+- [TODO Highlight v2](https://marketplace.visualstudio.com/items?itemName=jgclark.vscode-todo-highlight)
+- [SVG Preview](https://marketplace.visualstudio.com/items?itemName=SimonSiefke.svg-preview)
+- [Vim](https://marketplace.visualstudio.com/items?itemName=vscodevim.vim)
+
+## Keyboard Shortcuts
+
+Keyboard shortcuts I use often are
+
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> to open the almightly Command Palette
+- <kbd>cmd</kbd> + <kbd>p</kbd> to open a file
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>f</kbd> to open the Search Editor window
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>o</kbd> to jump to a variable or a method in the file
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>e</kbd> to open Explorer panel at the sidebar
+- <kbd>cmd</kbd> + <kbd>shift</kbd> + <kbd>x</kbd> to open Extension panel
+- <kbd>cmd</kbd> + <kbd>b</kbd> to hide the sidebar
+- <kbd>cmd</kbd> + <kbd>0</kbd> and <kbd>cmd</kbd> + <kbd>1</kbd> to switch focus between sidebar and editor window
+- <kbd>cmd</kbd> + <kbd>2</kbd> to create a split pane on the right
+
+- setting custom key binding from command palette
 
 TODO: make auto-complete less annoying by disabling words?
 
