--- a/src/pages/blog/vscode-setup-2023/index.mdx
+++ b/src/pages/blog/vscode-setup-2023/index.mdx
@@ -140,6 +140,14 @@ Keyboard shortcuts I use often are
 
 - setting custom key binding from command palette
 
+<Picture src="/images/vscode-setup-2023/configure-shortcut.png"
+  alt="configure shortcut menu"
+  width="737" height="354"/>
+
+<Picture src="/images/vscode-setup-2023/configure-shortcut-edit.png"
+  alt="configure shortcut menu edit window"
+  width="976" height="637"/>
+
 TODO: make auto-complete less annoying by disabling words?
 
 TODO: open file from sidebar with shortcut
